--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --projectName test",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "dev": "vue-cli-service serve --projectName smartscheduling"
+    "dev": "webpack-dev-server --config webpack.dev.js --Program schedule"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "debug": "^4.1.0",
@@ -24,20 +22,46 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
-    "@vue/eslint-config-prettier": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.1.6",
+    "babel-cli": "6.26.0",
+    "babel-eslint": "8.2.5",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-inline-environment-variables": "0.4.3",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-vue": "^2.0.2",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.7",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-vue": "^5.0.0-0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
+    "postcss-automath": "^1.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.15.2",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vue-cli-plugin-element": "^1.0.0",
+    "vue-html-webpack-plugin": "^3.2.2",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
     "worker-loader": "^2.0.0"
   }
 }
