--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.5",
     "lodash": "^4.17.11",
     "lokijs": "^1.5.5",
+    "moment": "^2.22.2",
     "postal": "^2.0.5",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
