增加测试环境打包命令

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "webpack-dev-server --open --config webpack.dev.js --Program schedule",
     "release": "webpack --config webpack.prod.js --Program schedule",
     "dev.deploy": "scp -r release/website/* root@173.100.1.50:/var/www/schedule/",
-    "dev.release.deploy": "yarn release && yarn dev.deploy"
+    "test.deploy": "scp -r release/website/* root@173.101.1.83:/var/www/schedule/",
+    "dev.release.deploy": "yarn release && yarn dev.deploy",
+    "test.release.deploy": "yarn release && yarn test.deploy"
   },
   "dependencies": {
     "@babel/preset-env": "^7.1.6",
