--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.5",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "6.24.1",
