--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test.deploy": "scp -r release/website/* root@173.101.1.83:/var/www/schedule/",
     "dev.release.deploy": "yarn release && yarn dev.deploy",
     "test.release.deploy": "yarn release && yarn test.deploy",
-    "build": "yarn test.release.deploy"
+    "build": "npm run release"
   },
   "dependencies": {
     "@babel/preset-env": "^7.1.6",
